agent: Warn on invalid media types for SDP

Only 6 strings are valid.

https://bugs.freedesktop.org/show_bug.cgi?id=90019